--- a/app/src/main/res/layout/activity_section_f3_s1.xml
+++ b/app/src/main/res/layout/activity_section_f3_s1.xml
@@ -161,7 +161,8 @@
                 <!-- f3102  Input   -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVf3102"
-                    style="@style/cardView">
+                    style="@style/cardView"
+                    android:visibility="@{form.f3101.equals(`1`) ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout
                         android:layout_width="match_parent"
