--- a/app/src/main/res/layout/activity_section_f3_s4.xml
+++ b/app/src/main/res/layout/activity_section_f3_s4.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="form"
-            type="edu.aku.hassannaqvi.uen_kmc.models.Form" />
+            type="edu.aku.hassannaqvi.uen_kmc.models.FollowUp" />
     </data>
 
     <LinearLayout
