--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
                     app:cardCornerRadius="24dp">
 
                     <LinearLayout
-                        android:id="@+id/openForm"
+                        android:id="@+id/openFormCS"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
@@ -114,62 +114,121 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
-                 <androidx.cardview.widget.CardView
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_marginStart="24dp"
-                     android:layout_marginTop="8dp"
-                     android:layout_marginEnd="24dp"
-                     android:padding="12dp"
-                     app:cardCornerRadius="24dp">
 
-                     <LinearLayout
-                         android:id="@+id/openFollowUp"
-                         android:layout_width="match_parent"
-                         android:layout_height="wrap_content"
-                         android:onClick="sectionPress"
-                         android:orientation="horizontal">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="24dp"
+                    android:padding="12dp"
+                    app:cardCornerRadius="24dp">
 
-                         <LinearLayout
-                             android:layout_width="0dp"
-                             android:layout_height="wrap_content"
-                             android:layout_margin="12dp"
-                             android:layout_weight="1"
-                             android:orientation="vertical">
+                    <LinearLayout
+                        android:id="@+id/openFormDIS"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:onClick="sectionPress"
+                        android:orientation="horizontal">
 
-                             <TextView
-                                 android:layout_width="match_parent"
-                                 android:layout_height="wrap_content"
-                                 android:background="@color/white"
-                                 android:drawableStart="@drawable/new_form"
-                                 android:drawablePadding="12dp"
-                                 android:gravity="center_vertical"
-                                 android:minWidth="460dp"
-                                 android:text="Follow-up Form"
-                                 android:textColor="@color/colorPrimary"
-                                 android:textSize="16dp" />
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="12dp"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
 
-                             <TextView
-                                 android:layout_width="wrap_content"
-                                 android:layout_height="wrap_content"
-                                 android:layout_marginStart="36dp"
-                                 android:gravity="center_horizontal|center_vertical"
-                                 android:text="Open to enter follow-up form"
-                                 android:textColor="@color/gray"
-                                 android:textSize="14sp" />
-                         </LinearLayout>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/white"
+                                android:drawableStart="@drawable/new_form"
+                                android:drawablePadding="12dp"
+                                android:gravity="center_vertical"
+                                android:minWidth="460dp"
+                                android:text="@string/open_discharge_form"
+                                android:textColor="@color/colorPrimary"
+                                android:textSize="16dp" />
 
-                         <TextView
-                             android:layout_width="wrap_content"
-                             android:layout_height="wrap_content"
-                             android:layout_gravity="center_horizontal|center_vertical"
-                             android:layout_margin="12dp"
-                             android:background="@drawable/ic_item_right_arrow"
-                             android:textColor="@color/colorAccent"
-                             android:textSize="24dp" />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="36dp"
+                                android:gravity="center_horizontal|center_vertical"
+                                android:text="Open to enter discharge form"
+                                android:textColor="@color/gray"
+                                android:textSize="14sp" />
+                        </LinearLayout>
 
-                     </LinearLayout>
-                 </androidx.cardview.widget.CardView>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal|center_vertical"
+                            android:layout_margin="12dp"
+                            android:background="@drawable/ic_item_right_arrow"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="24dp" />
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="24dp"
+                    android:padding="12dp"
+                    app:cardCornerRadius="24dp">
+
+                    <LinearLayout
+                        android:id="@+id/openFollowUp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:onClick="sectionPress"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="12dp"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/white"
+                                android:drawableStart="@drawable/new_form"
+                                android:drawablePadding="12dp"
+                                android:gravity="center_vertical"
+                                android:minWidth="460dp"
+                                android:text="Follow-up Form"
+                                android:textColor="@color/colorPrimary"
+                                android:textSize="16dp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="36dp"
+                                android:gravity="center_horizontal|center_vertical"
+                                android:text="Open to enter follow-up form"
+                                android:textColor="@color/gray"
+                                android:textSize="14sp" />
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal|center_vertical"
+                            android:layout_margin="12dp"
+                            android:background="@drawable/ic_item_right_arrow"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="24dp" />
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
 
                 <LinearLayout
@@ -448,7 +507,6 @@
                             android:textSize="14sp" />
 
                         <TextView
-                            android:visibility="gone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
@@ -459,7 +517,8 @@
                             android:shadowRadius="8"
                             android:text="Show Debug Address"
                             android:textColor="@color/white"
-                            android:textSize="14sp" />
+                            android:textSize="14sp"
+                            android:visibility="gone" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
