--- a/app/src/main/res/layout/activity_section_f1_s4.xml
+++ b/app/src/main/res/layout/activity_section_f1_s4.xml
@@ -1717,6 +1717,7 @@
                             android:layout_height="wrap_content">
 
                             <TextView
+                                style="@style/info"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="12dp"
