--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -287,7 +287,14 @@
         <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
 
-    <style name="DatePickerStyle" parent="Widget.AppCompat.EditText">
+    <style name="DatePickerStyle" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:layout_gravity">center_horizontal|center_vertical</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:selectableItemBackgroundBorderless">@color/white</item>
+        <item name="colorControlHighlight">@color/colorAccentLight</item>
+    </style>
+
+    <style name="TimePickerStyle" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:layout_gravity">center_horizontal|center_vertical</item>
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:selectableItemBackgroundBorderless">@color/white</item>
