--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -127,7 +127,6 @@
                                     android:paddingBottom="8dp"
                                     android:radius="2dp"
                                     android:singleLine="true"
-                                    android:text="test1234"
                                     android:textColor="@color/colorPrimary"
                                     android:textSize="18sp" />
 
@@ -158,7 +157,6 @@
                                         android:paddingBottom="8dp"
                                         android:radius="2dp"
                                         android:singleLine="true"
-                                        android:text="test1234"
                                         android:textColor="@color/colorPrimary"
                                         android:textSize="18sp" />
 
@@ -204,6 +202,7 @@
                             </LinearLayout>
 
                             <androidx.appcompat.widget.SwitchCompat
+                                android:visibility="gone"
                                 android:id="@+id/countrySwitch"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
