--- a/app/src/main/res/layout/activity_section_f1_s1.xml
+++ b/app/src/main/res/layout/activity_section_f1_s1.xml
@@ -463,7 +463,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <!-- f1111  Input   -->
-                <!--<androidx.cardview.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVf1111"
                     style="@style/cardView">
 
@@ -499,7 +499,7 @@
                             android:hint="@string/f1111"
                             android:text="@={form.f1111}" />
                     </LinearLayout>
-                </androidx.cardview.widget.CardView>-->
+                </androidx.cardview.widget.CardView>
 
                 <!-- f1112  Input   -->
                 <androidx.cardview.widget.CardView
