--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -106,6 +106,7 @@
                                 android:orientation="vertical">
 
                                 <EditText
+                                    android:text="test1234"
                                     android:id="@+id/username"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
@@ -136,6 +137,7 @@
                                     android:orientation="horizontal">
 
                                     <EditText
+                                        android:text="test1234"
                                         android:id="@+id/password"
                                         android:layout_width="0dp"
                                         android:layout_height="match_parent"
