--- a/app/src/main/res/layout/activity_fc_identification.xml
+++ b/app/src/main/res/layout/activity_fc_identification.xml
@@ -50,7 +50,7 @@
                 android:orientation="vertical">
 
 
-                <!-- a101  Input   -->
+                <!-- F1104  Input   -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVa101"
                     style="@style/cardView">
@@ -119,47 +119,6 @@
 
                 </androidx.cardview.widget.CardView>
 
-
-                <!-- f1105  Spinner   -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/fldGrpCVf1105"
-                    style="@style/cardView">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/bottom"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                style="@style/quesNum"
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:text="@string/Q_f1105" />
-
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:text="@string/f1105" />
-
-                            <androidx.appcompat.widget.AppCompatSpinner
-                                android:id="@+id/f1105"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="2"
-                                android:hint="@string/f1105" />
-
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
 
                 <!-- f1102  Radio   -->
                 <androidx.cardview.widget.CardView
